--- a/public/task.html
+++ b/public/task.html
@@ -33,8 +33,7 @@
                 <input type='checkbox' name='completed' class='task-edit-completed'>
             </div>
             <button type='submit' class='block btn task-edit-btn'>Edit</button>
-            <div class='form-alert'>
-            </div>
+            <div class='form-alert'></div>
         </form>
         <a href='index.html' class='btn back-link'>Back to Tasks</a>
     </div>
