Changed the title

--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
     <link rel='stylesheet' href='./normalize.css'>
     <link rel='stylesheet' href='./main.css'>
 
-    <title>Task Manager (Heroku)</title>
+    <title>Task Manager</title>
 </head>
 <body>
     <form class='task-form'>
